--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-golfnow",
   "version": "1.1.0",
   "description": "Node.js SDK for the GolfNow Api",
-  "main": "index.js",
+  "main": "lib/golfnow.js",
   "scripts": {
     "test": "node_modules/jest/bin/jest.js"
   },
